--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+    <mat-chip (click)="openFilters()" class="filter-chips">filter</mat-chip>
+    <app-food-list></app-food-list>
+</div>
