--- a/src/app/food-list/food-list.component.css
+++ b/src/app/food-list/food-list.component.css
@@ -1,7 +1,41 @@
-.foodList {
+/* .foodList {
     border: 1px solid #ddd;
     padding: 10px;
     margin: 10px;
     border-radius: 8px;
     background-color: #f9f9f9;
-}
+} */
+
+.food-listing {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    width: 100%;
+  }
+  
+  .food-card {
+    border: 1px solid #ddd;
+    margin: 10px;
+    padding: 15px;
+    width: 100%;
+    /* max-width: 300px; */
+    text-align: center;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .food-details {
+    margin-top: 10px;
+  }
+  
+  .description {
+    color: #555;
+  }
+  
+  .price {
+    font-weight: bold;
+    color: #007bff;
+  }
