--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       <form class="example-form" [formGroup]="login" (ngSubmit)="onSubmit()">
           <mat-form-field class="example-full-width">
             <mat-label>Username</mat-label>
-            <input matInput formControlName="username" >
+            <input matInput formControlName="email" >
           </mat-form-field>
           <mat-form-field class="example-full-width">
             <mat-label>Password</mat-label>
