--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -1,8 +1,8 @@
 <div class="food-listing">
     <mat-card *ngFor="let foodItem of foodList" class="food-card">
-      <img mat-card-image [src]="foodItem.imageUrl" alt="{{ foodItem.name }}">
+      <img mat-card-image [src]="foodItem.picture" alt="{{ foodItem.title }}">
       <mat-card-content class="food-details">
-        <h3>{{ foodItem.name }}</h3>
+        <h3>{{ foodItem.title }}</h3>
         <p class="description">{{ foodItem.description }}</p>
         <p class="price">{{ foodItem.price | currency:'INR':'symbol':'1.2-2' }}</p>
         <button mat-raised-button color="primary" (click)="addToCart(foodItem)">Add to Cart</button>
