--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,7 @@
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Email</mat-label>
-        <input matInput formControlName="email" />
+        <input matInput autocomplete="username" formControlName="email" />
       </mat-form-field>
       <!-- <mat-form-field class="example-full-width">
         <mat-label>Username</mat-label>
@@ -28,7 +28,7 @@
       </mat-form-field> -->
       <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
-        <input type="password" matInput formControlName="password" />
+        <input type="password" autocomplete="new-password" matInput formControlName="password" />
       </mat-form-field>
 
       <div class="formButtons">
