--- a/src/app/food-list/food-list.component.css
+++ b/src/app/food-list/food-list.component.css
@@ -1,34 +1,29 @@
-/* .foodList {
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-} */
-
 .food-listing {
-    display: flex;
-    flex-wrap: wrap;
-    /* justify-content: space-around; */
-    width: 100%;
+    display: inline-block;
+    height: 350px;
   }
   
   .food-card {
     border: 1px solid #ddd;
     margin: 10px;
-    padding: 15px;
+    width: 70%;
+    display: inline-block;
+  }
+
+  img {
     width: 100%;
-    /* max-width: 300px; */
-    text-align: center;
   }
   
-  img {
-    max-width: 100%;
-    height: auto;
+  .img {
+    margin: 20px;
+    display: inline-block;
+    width: 30%;
   }
   
   .food-details {
-    margin-top: 10px;
+    margin: 20px;
+    display: inline-block;
+    width: 40%;
   }
   
   .description {
