--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -30,14 +30,8 @@ div {
     width: 30px;
     height: 30px;
   }
-  
-  .badge {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: white;
-    color: white;
-    border-radius: 50%;
-    padding: 5px;
-    font-size: 12px;
+
+  .mat-badge-content {
+    background: white !important;
+    color: black !important;
   }
