--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,11 +6,11 @@
       <form class="example-form" [formGroup]="login" (ngSubmit)="onSubmit()">
           <mat-form-field class="example-full-width">
             <mat-label>Username</mat-label>
-            <input matInput formControlName="email" >
+            <input matInput autocomplete="username" formControlName="email" >
           </mat-form-field>
           <mat-form-field class="example-full-width">
             <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password" >
+            <input matInput type="password" autocomplete="current-password" formControlName="password" >
           </mat-form-field>
           <div class="formButtons">
             <span><button type="submit" mat-raised-button color="#ff0000">Login</button></span>
